tests/NormalTests/paczka1/small_fuzzy/76899779.err
Error in line 12: F7eLXF S713 85,5
Error in line 14: jj0byQ S267 10,7
